fix button on mobile

--- a/css/button.css
+++ b/css/button.css
@@ -6,8 +6,8 @@
     cursor: pointer;
     background-color: var(--color-blue-500);
     border-radius: 100px;
-    padding: 12px 70px;
-    font-size: 18px;
+    padding: 12px 40px;
+    font-size: 16px;
     font-weight: 500;
   }
   
@@ -16,4 +16,9 @@
     cursor: not-allowed;
   }
   
- 
+  @media(min-width: 375px) {
+    .button {
+      font-size: 18px;
+      padding: 12px 70px;
+    }
+  }
